# vnpy_sopttest

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
script/: run.py
vnpy_sopttest/: __init__.py
vnpy_sopttest/api/libs/: soptthostmduserapi_se.lib  soptthosttraderapi_se.lib
vnpy_sopttest/api/vnsopt/vnsopttd/: vnsopttd.cpp  vnsopttd.h
vnpy_sopttest/gateway/: __init__.py  sopttest_gateway.py
